[gd_scene load_steps=53 format=3 uid="uid://b3vg3a1qdxhdt"]

[ext_resource type="PackedScene" uid="uid://b1fgppfdgww5t" path="res://scenes/level.tscn" id="1_gedsy"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_w2mvy"]
[ext_resource type="PackedScene" uid="uid://brukriyo3lckw" path="res://scenes/player.tscn" id="2_m5syh"]
[ext_resource type="Script" path="res://scripts/hud_manager.gd" id="3_ihvn3"]
[ext_resource type="Texture2D" uid="uid://bievwn5fjcer6" path="res://assets/sprites/stars.png" id="3_psbwy"]
[ext_resource type="PackedScene" uid="uid://dbdixs75phf3" path="res://scenes/game_manager.tscn" id="3_uk04j"]
[ext_resource type="PackedScene" uid="uid://bkkrxhpnkcpss" path="res://scenes/asteroid.tscn" id="4_24ike"]
[ext_resource type="FontFile" uid="uid://ddg18mf0nb4yj" path="res://assets/fonts/PressStart2P-vaV7.ttf" id="6_bakdp"]
[ext_resource type="Texture2D" uid="uid://nyeaadjw1oy2" path="res://assets/sprites/health-bar-over.png" id="7_61o8m"]
[ext_resource type="Texture2D" uid="uid://bwvlt6taw3ndt" path="res://assets/sprites/health-bar-under.png" id="7_cg0y4"]
[ext_resource type="Texture2D" uid="uid://bco2ju4c4rmem" path="res://assets/sprites/health-bar-progress.png" id="7_ynmwg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_neicu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yhjjt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n8pud"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dks2o"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh683"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxurh"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnmt0"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6vsc"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7de63"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk4q3"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yuwmv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8pud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dks2o")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh683")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxurh")
}],
"loop": true,
"name": &"stars2",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnmt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6vsc")
}],
"loop": true,
"name": &"stars3",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7de63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk4q3")
}],
"loop": true,
"name": &"stars4",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bstg5"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5yax"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yrph"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohxu1"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_edv0w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bstg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5yax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yrph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohxu1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ydutk"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue0g2"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwhs8"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq4h7"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1mm1"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbwe1"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqub3"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yyb5"]
atlas = ExtResource("3_psbwy")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stmd7"]
atlas = ExtResource("3_psbwy")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu5pu"]
atlas = ExtResource("3_psbwy")
region = Rect2(64, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sim25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydutk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue0g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwhs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq4h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1mm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbwe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqub3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yyb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stmd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5pu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kj1an"]
atlas = ExtResource("3_psbwy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmsmr"]
atlas = ExtResource("3_psbwy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwg45"]
atlas = ExtResource("3_psbwy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_errpc"]
atlas = ExtResource("3_psbwy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivksd"]
atlas = ExtResource("3_psbwy")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0u2w"]
atlas = ExtResource("3_psbwy")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0r1v"]
atlas = ExtResource("3_psbwy")
region = Rect2(128, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2efnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj1an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmsmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwg45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_errpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivksd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0u2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0r1v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vbs7j"]
atlas = ExtResource("3_psbwy")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0m37"]
atlas = ExtResource("3_psbwy")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q6fx"]
atlas = ExtResource("3_psbwy")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxgvb"]
atlas = ExtResource("3_psbwy")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yaxvk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbs7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0m37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q6fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxgvb")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="Curve2D" id="Curve2D_vo2vv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -612, -363, 0, 0, 0, 0, 615, -369, 0, 0, 0, 0, 624, 352, 0, 0, 0, 0, -618, 353, 0, 0, 0, 0, -612, -363)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_w2mvy")
asteroid_scene = ExtResource("4_24ike")

[node name="GameManager" parent="." instance=ExtResource("3_uk04j")]

[node name="HUDManager" type="Node" parent="."]
script = ExtResource("3_ihvn3")

[node name="Player" parent="." instance=ExtResource("2_m5syh")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Level" parent="." instance=ExtResource("1_gedsy")]
z_index = -2

[node name="HealthBar" type="TextureProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(200, 20)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -551.0
offset_top = -309.0
offset_right = -351.0
offset_bottom = -289.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
value = 100.0
texture_under = ExtResource("7_ynmwg")
texture_over = ExtResource("7_61o8m")
texture_progress = ExtResource("7_cg0y4")

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
offset_left = -328.0
offset_top = -307.0
offset_right = -200.0
offset_bottom = -284.0
theme_override_fonts/font = ExtResource("6_bakdp")
text = "Score: 0"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -37.0
offset_right = 203.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_bakdp")
theme_override_font_sizes/font_size = 45
text = "GAME OVER"

[node name="RetryButton" type="Button" parent="GameOverLabel"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -153.5
offset_top = 11.0
offset_right = 154.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_bakdp")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_neicu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_neicu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yhjjt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_neicu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_neicu")
text = "RETRY?"

[node name="NameNSID" type="Label" parent="."]
z_index = -1
offset_left = 410.0
offset_top = -308.0
offset_right = 554.0
offset_bottom = -260.0
theme_override_fonts/font = ExtResource("6_bakdp")
text = "Htoo Aung
KHA451"

[node name="Background" type="Node" parent="."]

[node name="Stars1" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-408, -193)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars2" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(467, 125)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars3" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-223, 39)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"

[node name="Stars6" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(328, -36)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars7" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(284, 229)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_yuwmv")
animation = &"stars3"
autoplay = "stars3"

[node name="Stars8" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-508, -40)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars9" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-423, 64)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_yuwmv")
animation = &"stars2"
autoplay = "stars2"

[node name="Stars10" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-22, 275)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"

[node name="Stars11" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-518, 246)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"

[node name="Stars12" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-319, 212)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars13" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-101, -195)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_yuwmv")
animation = &"stars4"
autoplay = "stars4"
frame_progress = 0.602943

[node name="Stars18" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(202, 7)
sprite_frames = SubResource("SpriteFrames_yuwmv")
animation = &"stars4"
autoplay = "stars4"
frame_progress = 0.975803

[node name="Stars14" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(386, -228)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_yuwmv")
animation = &"stars2"
autoplay = "stars2"

[node name="Stars15" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(170, -256)
scale = Vector2(1.7, 1.7)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars16" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(68, 82)
scale = Vector2(1.8, 1.8)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="Stars4" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-116, 171)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"

[node name="Stars5" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-248, -104)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"

[node name="Stars17" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(10, -9)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_yuwmv")
autoplay = "default"
frame_progress = 0.377799

[node name="BlackHole" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(171, -108)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_edv0w")
autoplay = "default"
frame_progress = 0.04591

[node name="ShootingStar" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-353, 131)
sprite_frames = SubResource("SpriteFrames_sim25")
autoplay = "default"

[node name="BluePlanet" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(-349, -74)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2efnh")
autoplay = "default"
frame_progress = 0.474765

[node name="PurpleVortex" type="AnimatedSprite2D" parent="Background"]
z_index = -1
position = Vector2(149, 203)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_yaxvk")
autoplay = "default"

[node name="AsteroidTimer" type="Timer" parent="."]

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_vo2vv")

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2(-612, -363)
rotation = -0.00488994

[connection signal="pressed" from="GameOverLabel/RetryButton" to="HUDManager" method="_on_retry_button_pressed"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_mob_timer_timeout"]
